Adding ROC curve for KNN

--- a/Decision Tree .ipynb
+++ b/Decision Tree .ipynb
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Plotting ROC curve for our Decision Tree"
+    "### Plotting ROC curve for Decision Tree"
    ],
    "metadata": {
     "collapsed": false
